--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         #intro {
           font-size: 2rem;
           font-family: "Roboto Mono", monospace;
-          color: aqua;
+          color:red;
         }
         #name {
           font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
